[metadata]
name = artifactsrc
version = 20240112
description = Digital Forensics Artifact knowledge base
long_description = Documentation accompanying the Digital Forensics Artifact Repository.
long_description_content_type = text/plain
url = https://github.com/ForensicArtifacts/artifacts-kb
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  artifactsrc = artifactsrc
packages = find:
python_requires = >=3.7
scripts =
  tools/check_artifacts.py

[options.package_data]
artifactsrc =
  *.yaml
  data/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_rpm]
release = 1
packager = Joachim Metz <joachim.metz@gmail.com>
doc_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
build_requires = python3-setuptools
requires =
  libbde-python3 >= 20220121
  libcreg-python3 >= 20200725
  libewf-python3 >= 20131210
  libexe-python3 >= 20131229
  libfsapfs-python3 >= 20220709
  libfsext-python3 >= 20220829
  libfsfat-python3 >= 20220925
  libfshfs-python3 >= 20220831
  libfsntfs-python3 >= 20211229
  libfsxfs-python3 >= 20220829
  libfvde-python3 >= 20220121
  libfwnt-python3 >= 20210717
  libluksde-python3 >= 20220121
  libmodi-python3 >= 20210405
  libphdi-python3 >= 20220228
  libqcow-python3 >= 20201213
  libregf-python3 >= 20201002
  libsigscan-python3 >= 20230109
  libsmdev-python3 >= 20140529
  libsmraw-python3 >= 20140612
  libvhdi-python3 >= 20201014
  libvmdk-python3 >= 20140421
  libvsapm-python3 >= 20230506
  libvsgpt-python3 >= 20211115
  libvshadow-python3 >= 20160109
  libvslvm-python3 >= 20160109
  libwrc-python3 >= 20220104
  python3-artifacts >= 20220219
  python3-cffi >= 1.9.1
  python3-cryptography >= 2.0.2
  python3-dfdatetime >= 20221112
  python3-dfimagetools >= 20220129
  python3-dfvfs >= 20220831
  python3-dfwinreg >= 20211207
  python3-dtfabric >= 20230518
  python3-idna >= 2.5
  python3-pytsk3 >= 20210419
  python3-pyyaml >= 3.10
  python3-xattr >= 0.7.2

[bdist_wheel]
universal = 1
