[metadata]
name = artifactsrc
version = 20240304
description = Digital Forensics Artifact knowledge base
long_description = Documentation accompanying the Digital Forensics Artifact Repository.
long_description_content_type = text/plain
url = https://github.com/ForensicArtifacts/artifacts-kb
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  artifactsrc = artifactsrc
packages = find:
python_requires = >=3.8
scripts =
  tools/check_artifacts.py
  tools/export.py
  tools/generate_docs.py

[options.package_data]
artifactsrc =
  *.yaml
  data/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_wheel]
universal = 1
